linket sidene sammen.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
         <nav>
 
             <span>
-                <a href="index.html">Askepott Sko</a>
+                <a href="index.html">AskepottSko</a>
+                <a href="produkt.html">Produktside</a>
+                <a href="innlogging.html">Logg inn</a>
             </span>
-
+           <ul>
+            <li>
+                <a href="produkt.html">Produktside</a>
+            </li>
+            <li>
+                <a href="innlogging.html">Logg inn</a>
+            </li>
+           </ul>
         </nav>
     </header>
 
