--- a/innlogging.html
+++ b/innlogging.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Forside</title>
+    <title>Logg inn</title>
 
 </head>
 <body>
     <header>
         <nav>
-
+            <span>
+                <a href="index.html">HJEM</a>
+                <a href="produkt.html">Produktside</a>
+            </span>
 
 
 
@@ -21,6 +24,10 @@
 
     <main>
         <section>
+
+            <article>
+                
+            </article>
 
         </section>
 
