--- a/produkt.html
+++ b/produkt.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Forside</title>
+    <title>Produktside</title>
 
 </head>
 <body>
     <header>
         <nav>
-
-
-
-
+            <span>
+                <a href="index.html">HJEM</a>
+                <a href="innlogging.html">Logg inn</a>
+            </span>
+           
         </nav>
+        
     </header>
 
     <main>
