Lagt inn bilder av sko

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Forside</title>
 
 </head>
+
 <body>
     <header>
         <nav>
 
             <span>
-                <a href="index.html">AskepottSko</a>
-                <a href="produkt.html">Produktside</a>
-                <a href="innlogging.html">Logg inn</a>
+                <a href="index.html">LOGO</a>
             </span>
            <ul>
             <li>
@@ -27,17 +26,25 @@
             </li>
            </ul>
         </nav>
+
+        <h1>Askepott Sko</h1>
+
+        <p>Du trenger ikke en prins for å ha flotte sko</p>
+
     </header>
 
     <main>
         <section>
+           
+
+
 
         </section>
 
     </main>
 
     <footer>
-
+     
     </footer>
 
 </body>
