--- a/produkt.html
+++ b/produkt.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Produktside</title>
 
 </head>
@@ -18,7 +18,9 @@
             </span>
            
         </nav>
-        
+        <h1>Askepott Sko</h1>
+
+        <p>Du trenger ikke en prins for å ha flotte sko</p>
     </header>
 
     <main>
