Lagt til bilder
Lagt til ny header, lagt til bilder, laget brødsti og endret på footer

--- a/innlogging.html
+++ b/innlogging.html
@@ -12,17 +12,20 @@
 <body>
     <header>
         <nav>
+
             <span>
-                <a href="index.html">HJEM</a>
-                <a href="produkt.html">Produktside</a>
+                <a>Meny</a>
+                <a>Søkefelt</a>
+                <a href="innlogging.html">Logg inn</a>
+                <a>Handlekurv</a>
+                <a href="index.html"><H1>Askepott Sko</H1></a>
+               
             </span>
-
-
-
+      
         </nav>
-        <h1>Askepott Sko</h1>
 
         <p>Du trenger ikke en prins for å ha flotte sko</p>
+
     </header>
 
     <main>
@@ -37,7 +40,13 @@
     </main>
 
     <footer>
-
+        <ul>
+            <li>Kundeservice</li>
+            <li>Finn Oss</li>
+            <li>
+                <a href="index.html">Hjem</a>
+            </li>
+        </ul>
     </footer>
 
 </body>
