Sjekket om css var linket

--- a/innlogging.html
+++ b/innlogging.html
@@ -29,15 +29,60 @@
     </header>
 
     <main>
+
+        <h1>LOGG INN</h1>
+
+             <a href="index.html">Hjem</a>
+             <a href="produkt.html">Løpesko</a>
+             <a>Logg Inn</a>
+             
+
+
         <section>
+           <br>
 
             <article>
+                <label for="email-signup"></label><a>Telefon/epost</a>
+            </article>
 
+            <br>
+
+            <article>
+                <a>Passord</a>
+            </article>
+
+            <br>
+
+            <article>
+                <a>Logg inn knapp</a>
+            </article>
+
+            <br>
+
+            <article>
+                <a>Glemt passord? Trykk her!</a>
+            </article>
+
+            <br>
+
+            <article>
+            <a>Ny bruker? Trykk her!</a>
             </article>
 
         </section>
 
     </main>
+
+    <section>
+        <form>
+            <!-- Etikett som forklarer hva feltet er for -->
+            <label for="email-signup"></label>
+            <!-- Inntastingsfelt for e-postadressen -->
+            <input type="text" id="email-signup">
+            <!-- Knapp for å sende inn skjemaet -->
+            <input type="submit" value="Meld deg på">
+        </form>
+    </section>
 
     <footer>
         <ul>
