--- a/produkt.html
+++ b/produkt.html
@@ -29,6 +29,8 @@
 
     <main>
 
+        <h2>Løpesko</h2>
+
         <a href="index.html">Hjem</a>
         <a href="produkt.html">Løpesko</a>
         <a>Vintersko</a>
