Lagt til elementer på Logg inn side
La til knapper og tekstboks for utfylling av brukerinformasjon.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
            <article>
             <h3>Høstsko</h3>
+            <img src="img/DreamShaper_v7_White_background_womens_boots_600px_x_400_px_2.jpg" alt="høye brune skinnstøvletter med spenner">
            </article>
 
            <article>
@@ -43,7 +44,7 @@
 
            <article>
             <h3>Tøfler</h3>
-            <img src="img/DreamShaper_v7_White_background_light_brown_lambswool_slippers_5.jpg" alt="Brune tøfler">
+            <img src="img/DreamShaper_v7_White_background_light_brown_lambswool_slippers_5.jpg" alt="Brune skinn-tøfler med hvit pels">
            </article>
 
            
