--- a/innlogging.html
+++ b/innlogging.html
@@ -12,17 +12,18 @@
 <body>
     <header>
         <nav>
-
             <span>
                 <a href="index.html" id="logo">Askepott Sko</a>
             </span>
             <ul>
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="#">Meny</a></li>
-                <li><a href="#">Søk</a></li>
                 <li><a href="#">Handlekurv</a></li>
                 <li><a href="innlogging.html">Logg inn</a></li>  
             </ul> 
+
+            <input type="search" name="search" placeholder="Søkeord...">
+            <input type="submit" value="Søk">
         </nav>
     </header>
 
@@ -32,8 +33,8 @@
              <a href="produkt.html">Tøfler</a>
              <a>Logg Inn</a>
              
-        <section>
-            <h2>Logg Inn</h2>
+        <h1 class="logginn">Logg Inn</h1>     
+        <section class="default-flex">
 
             <article>
                 <h5>Bli medlem og få 20% på første kjøp!</h5>
@@ -45,14 +46,11 @@
                 <input type="submit" value="Gå">
             </article>
 
-            <br>
 
             <article>
                 <h3>Glemt passord?</h3>
                 <input type="submit" value="Trykk her!">
             </article>
-
-            <br>
 
             <article>
                 <h3>Ny bruker?</h3>
@@ -68,7 +66,7 @@
     <footer>
         <nav>
         <ul id="informasjon">
-            <li>Kundeservice</li>
+            <li>Info</li>
             <li>Finn Oss</li>
             <li><a href="index.html">Hjem</a></li>
         </ul>
