Gjort endring på htmlkode og fjernet CSS
Lagt til ikoner i header, fjernet css(skal skrive på nytt), endret på html-kode.

--- a/index.html
+++ b/index.html
@@ -2,37 +2,35 @@
 <html lang="en">
 
 <head>
-
+    <script src="https://kit.fontawesome.com/32a78cf5d9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Askepott Sko</title>
 
 </head>
-
 <body>
     <header>
         <nav>
             <span>
-                <a href="index.html" id="logo">Askepott Sko</a>
+                <a href="index.html">Askepott Sko</a>
             </span>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="#">Meny</a></li>
-                <li><a href="#">Handlekurv</a></li>
-                <li><a href="innlogging.html">Logg inn</a></li>  
+                <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bars" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
+                <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
             </ul>
-            
-            <input type="search" name="search" placeholder="Søkeord...">
-            <input type="submit" value="Søk">
-            
-
+            <form>
+                <input type="search" placeholder="Søkeord...">
+                <input type="submit" value="Gå">
+            </form>
         </nav>
     </header>
 
     <main>
-        <h1 class="popular">Populære kategorier</h1>
-        <section class="default-flex">
+        <h1>Populære kategorier</h1>
+        <section>
 
            <article>
                 <img src="img/DreamShaper_v7_White_background_womens_boots_600px_x_400_px_2.jpg" alt="Høye brune skinnstøvletter med spenner">
@@ -68,16 +66,15 @@
 
     <footer>
         <nav>
-        <ul id="informasjon">
-            <li>Info</li>
-            <li>Finn Oss</li>
-            <li>
+            <ul>
+                <li>Info</li>
+                <li>Finn Oss</li>
+                <li>
                 <a href="index.html">Hjem</a>
-            </li>
-        </ul>
+                </li>
+            </ul>
         </nav>
     </footer>
-
 </body>
 
 </html>
