--- a/innlogging.html
+++ b/innlogging.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    <script src="https://kit.fontawesome.com/32a78cf5d9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -13,17 +13,18 @@
     <header>
         <nav>
             <span>
-                <a href="index.html" id="logo">Askepott Sko</a>
+                <a href="index.html">Askepott Sko</a>
             </span>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="#">Meny</a></li>
-                <li><a href="#">Handlekurv</a></li>
-                <li><a href="innlogging.html">Logg inn</a></li>  
-            </ul> 
-
-            <input type="search" name="search" placeholder="Søkeord...">
-            <input type="submit" value="Søk">
+                <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bars" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
+                <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
+            </ul>
+            <form>
+                <input type="search" placeholder="Søkeord...">
+                <input type="submit" value="Gå">
+            </form>
         </nav>
     </header>
 
@@ -33,8 +34,9 @@
              <a href="produkt.html">Tøfler</a>
              <a>Logg Inn</a>
              
-        <h1 class="logginn">Logg Inn</h1>     
-        <section class="default-flex">
+        <h1>Logg Inn</h1> 
+
+        <section>
 
             <article>
                 <h5>Bli medlem og få 20% på første kjøp!</h5>
@@ -61,11 +63,9 @@
 
     </main>
 
-    
-
     <footer>
         <nav>
-        <ul id="informasjon">
+        <ul>
             <li>Info</li>
             <li>Finn Oss</li>
             <li><a href="index.html">Hjem</a></li>
