--- a/produkt.html
+++ b/produkt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    <script src="https://kit.fontawesome.com/32a78cf5d9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -13,18 +13,18 @@
     <header>
          <nav>
             <span>
-                <a href="index.html" id="logo">Askepott Sko</a>
+                <a href="index.html">Askepott Sko</a>
             </span>
             <ul>
-                <li><a href="index.html">Hjem</a></li>
-                <li><a href="#">Meny</a></li>
-                <li><a href="#">Handlekurv</a></li>
-                <li><a href="innlogging.html">Logg inn</a></li>  
+                <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bars" style="color: #a27442;"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
+                <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
             </ul>
-
-            <input type="search" name="search" placeholder="Søkeord...">
-            <input type="submit" value="Søk">
-        
+            <form>
+                <input type="search" placeholder="Søkeord...">
+                <input type="submit" value="Gå">
+            </form>
         </nav>
     </header>
 
@@ -33,9 +33,9 @@
         <a href="produkt.html">Løpesko</a>
         <a>Vintersko</a>
 
-        <h1 class="tofler">Tøfler</h1>
+        <h1>Tøfler</h1>
 
-        <section class="default-flex">
+        <section>
             <article>
                 <img src="img/DreamShaper_v7_White_background_light_brown_lambswool_slippers_3(1).jpg" alt="brune tofler med hvit pels">
                 <h4>Beige tøfler</h4>
@@ -87,11 +87,11 @@
 
     <footer>
         <nav>
-        <ul id="informasjon">
-            <li>Info</li>
-            <li>Finn Oss</li>
-            <li><a href="index.html">Hjem</a></li>
-        </ul>
+            <ul>
+                <li>Info</li>
+                <li>Finn Oss</li>
+                <li><a href="index.html">Hjem</a></li>
+            </ul>
         </nav>
     </footer>
 
