--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <span>
-                <a href="index.html">Askepott Sko</a>
+                <a href="index.html" id="logo">Askepott Sko</a>
             </span>
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
@@ -30,7 +30,7 @@
 
     <main>
         <h1>Populære kategorier</h1>
-        <section>
+        <section class="default-flex">
 
            <article>
                 <img src="img/DreamShaper_v7_White_background_womens_boots_600px_x_400_px_2.jpg" alt="Høye brune skinnstøvletter med spenner">
@@ -47,18 +47,17 @@
                 <a href="produkt.html"><h3>Tøfler</h3></a>
            </article>
 
-           
            <article>
                 <img src="img/DreamShaper_v7_White_background_running_shoes_womens_600px_x_4.jpg" alt="Lave hvite løpesko med røde detaljer">
                 <a href="produkt.html"><h3>Treningssko</h3></a>
            </article>
 
            <article>
-                <h3>Salg</h3>
-           </article>
+                <h3>Nyheter</h3>
+            </article>
 
            <article>
-                <h3>Nyheter</h3>
+                <h3>Salg</h3>
            </article>
 
         </section>
