Lagt til endringer i CSS
Endret på CSS-verdier og MediaQueries.

--- a/produkt.html
+++ b/produkt.html
@@ -88,9 +88,11 @@
     <footer>
         <nav>
             <ul>
-                <li>Info</li>
-                <li>Finn Oss</li>
-                <li><a href="index.html">Hjem</a></li>
+                <li><i class="fa-solid fa-circle-info" style="color: #a27442;"></i></li>
+                <li><i class="fa-solid fa-location-dot" style="color: #a27442;"></i></li>
+                <li>
+                <a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a>
+                </li>
             </ul>
         </nav>
     </footer>
