--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Askepott Sko</title>
 
 </head>
-<body id="grid-container">
+<body>
+    <div id="grid-container">
     <header>
         <nav>
             <span>
@@ -21,7 +22,7 @@
                 <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
                 <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
             </ul>
-            <form>
+            <form class="sokefelt">
                 <input type="search" placeholder="Søkeord...">
                 <input type="submit" value="Gå">
             </form>
@@ -51,29 +52,32 @@
                 <img src="img/DreamShaper_v7_White_background_running_shoes_womens_600px_x_4.jpg" alt="Lave hvite løpesko med røde detaljer">
                 <a href="produkt.html"><h3>Treningssko</h3></a>
            </article>
-
+           <div class="pynt">
            <article>
                 <h3>Nyheter</h3>
             </article>
+            </div>
 
+            <div class="pynt">
            <article>
                 <h3>Salg</h3>
            </article>
-
+           </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <nav>
             <ul>
-                <li>Info</li>
-                <li>Finn Oss</li>
+                <li><i class="fa-solid fa-circle-info" style="color: #a27442;"></i></li>
+                <li><i class="fa-solid fa-location-dot" style="color: #a27442;"></i></li>
                 <li>
-                <a href="index.html">Hjem</a>
+                <a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a>
                 </li>
             </ul>
         </nav>
     </footer>
+    </div>
 </body>
 
 </html>
