Lagt til flex på Logg-inn siden
Lagt til flex og grid på logg-inn siden, lagt til skrift under bilder på produktsiden, endret H1 på alle sidene.

--- a/innlogging.html
+++ b/innlogging.html
@@ -10,10 +10,11 @@
 
 </head>
 <body>
+    <div id="grid-container">
     <header>
         <nav>
             <span>
-                <a href="index.html">Askepott Sko</a>
+                <a href="index.html" id="logo">Askepott Sko</a>
             </span>
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
@@ -34,9 +35,9 @@
              <a href="produkt.html">Tøfler</a>
              <a>Logg Inn</a>
              
-        <h1>Logg Inn</h1> 
+        <h1 class="logginnh1">Logg Inn</h1> 
 
-        <section>
+        <section class="default-flex3">
 
             <article>
                 <h5>Bli medlem og få 20% på første kjøp!</h5>
@@ -63,7 +64,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
         <nav>
         <ul>
             <li><i class="fa-solid fa-circle-info" style="color: #a27442;"></i></li>
@@ -74,7 +75,7 @@
         </ul>
         </nav>
     </footer>
-
+    </div>
 </body>
 
 </html>
