--- a/produkt.html
+++ b/produkt.html
@@ -10,10 +10,11 @@
 
 </head>
 <body>
+    <div id="grid-container"></div>
     <header>
          <nav>
             <span>
-                <a href="index.html">Askepott Sko</a>
+                <a href="index.html" id="logo">Askepott Sko</a>
             </span>
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house" style="color: #a27442;"></i></a></li>
@@ -33,9 +34,9 @@
         <a href="produkt.html">Løpesko</a>
         <a>Vintersko</a>
 
-        <h1>Tøfler</h1>
+        <h1 class="produkth1">Tøfler</h1>
 
-        <section>
+        <section class="default-flex">
             <article>
                 <img src="img/DreamShaper_v7_White_background_light_brown_lambswool_slippers_3(1).jpg" alt="brune tofler med hvit pels">
                 <h4>Beige tøfler</h4>
@@ -67,25 +68,25 @@
             </article>
 
             <article>
-                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_1.jpg" alt="vet ikke">
-                <h4>vet ikke</h4>
+                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_1.jpg" alt="Lave sorte flip flops med hvit reim">
+                <h4>Klassisk sandal med detalj</h4>
             </article>
 
             <article>
-                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_3.jpg" alt="vet ikke">
-                <h4>vet ikke</h4>
+                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_3.jpg" alt="Lave sorte flip flops med hvit reim og en sort sløye som detalj">
+                <h4>Klassisk sandal med sløyfe</h4>
             </article>
 
             <article>
-                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_5.jpg" alt="vet ikke">
-                <h4>vet ikke</h4>
+                <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_5.jpg" alt="Sorte flip flops med lav hel, bred hvit reim og en liten hvit sløyfe som detalj ">
+                <h4>Høyhælte sandaler</h4>
             </article>
 
         </section>
 
     </main>
 
-    <footer>
+    <footer class="footer">
         <nav>
             <ul>
                 <li><i class="fa-solid fa-circle-info" style="color: #a27442;"></i></li>
@@ -96,7 +97,7 @@
             </ul>
         </nav>
     </footer>
-
+    </div>
 </body>
 
 </html>
