Endret på logg-inn siden.
Endret på logg-inn siden for desktop.

--- a/innlogging.html
+++ b/innlogging.html
@@ -22,7 +22,7 @@
                 <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
                 <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
             </ul>
-            <form>
+            <form class="sokefelt">
                 <input type="search" placeholder="Søkeord...">
                 <input type="submit" value="Gå">
             </form>
@@ -30,32 +30,33 @@
     </header>
 
     <main>   
-
-             <a href="index.html">Hjem</a>
-             <a href="produkt.html">Tøfler</a>
+            <br>
+             <a href="index.html">Hjem -</a>
+             <a href="produkt.html">Tøfler -</a>
              <a>Logg Inn</a>
              
         <h1 class="logginnh1">Logg Inn</h1> 
 
         <section class="default-flex3">
 
-            <article>
-                <h5>Bli medlem og få 20% på første kjøp!</h5>
+            <article class="logginn1">
+                <h5 class="logginnh5">Bli medlem og få 20% på første kjøp!</h5>
             
                 <p>Epost eller mobilnr:</p>
                 <input type="text" name="username" size="15" maxlength="30">
+                <input type="submit" value="Gå">
                 <p>Passord:</p>
                 <input type="text" name="password" size="15" maxlength="30">
                 <input type="submit" value="Gå">
             </article>
 
 
-            <article>
+            <article class="logginn2">
                 <h3>Glemt passord?</h3>
                 <input type="submit" value="Trykk her!">
             </article>
 
-            <article>
+            <article class="logginn3">
                 <h3>Ny bruker?</h3>
                 <input type="submit" value="Trykk her!">
             </article>
