--- a/produkt.html
+++ b/produkt.html
@@ -22,7 +22,7 @@
                 <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
                 <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
             </ul>
-            <form>
+            <form class="sokefelt">
                 <input type="search" placeholder="Søkeord...">
                 <input type="submit" value="Gå">
             </form>
