--- a/innlogging.html
+++ b/innlogging.html
@@ -34,9 +34,11 @@
 
     <main>   
             <br>
+            <section class="sti">
              <a href="index.html">Hjem -</a>
              <a href="produkt.html">Tøfler -</a>
              <a>Logg Inn</a>
+            </section>
              
         <h1 class="logginnh1">Logg Inn</h1> 
 
@@ -63,11 +65,8 @@
                 <h3>Ny bruker?</h3>
                 <input type="submit" value="Trykk her!">
             </article>
-
         </section>
-
     </main>
-
     <footer class="footer">
         <nav>
         <ul>
