--- a/produkt.html
+++ b/produkt.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/32a78cf5d9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link href="css/icon/css/fontawesome.css" rel="stylesheet">
@@ -10,10 +9,10 @@
     <link href="css/icon/css/solid.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Produktside</title>
-
 </head>
+<!--Alle bilder som er brukt på denne siden er generert av Leonardo. AI https://app.leonardo.ai/ai-generations-->
 <body>
-    <div id="grid-container"></div>
+    <div id="grid-container">
     <header>
          <nav>
             <span>
@@ -31,15 +30,14 @@
             </form>
         </nav>
     </header>
-
     <main>
         <br>
-        <a href="index.html">Hjem</a>
-        <a href="produkt.html">Løpesko</a>
-        <a>Vintersko</a>
-
-        <h1 class="produkth1">Tøfler</h1>
-
+        <section class="sti">
+            <a href="index.html">Hjem</a>
+            <a href="produkt.html">Løpesko</a>
+            <a>Vintersko</a>
+        </section>
+            <h1 class="produkth1">Tøfler</h1>
         <section class="default-flex">
             <article>
                 <img src="img/DreamShaper_v7_White_background_light_brown_lambswool_slippers_3(1).jpg" alt="brune tofler med hvit pels">
@@ -85,11 +83,8 @@
                 <img src="img/DreamShaper_v7_White_background_black_slippers_womens_600px_x_5.jpg" alt="Sorte flip flops med lav hel, bred hvit reim og en liten hvit sløyfe som detalj ">
                 <h4>Høyhælte sandaler</h4>
             </article>
-
         </section>
-
     </main>
-
     <footer class="footer">
         <nav>
             <ul>
