endret på logg inn.
endret knapp og tekst på skjema.

--- a/innlogging.html
+++ b/innlogging.html
@@ -45,10 +45,10 @@
                 <h5 class="logginnh5">Bli medlem og få 20% på første kjøp!</h5>
             
                 <p>Epost eller mobilnr:</p>
-                <input type="text" name="username" size="15" maxlength="30">
+                <input type="text" name="username" placeholder="epost/mobilnr" size="15" maxlength="30">
                 <input type="submit" value="Gå">
                 <p>Passord:</p>
-                <input type="text" name="password" size="15" maxlength="30">
+                <input type="password" name="password" placeholder="passord" size="15" maxlength="30">
                 <input type="submit" value="Gå">
             </article>
 
