--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <h1>Populære kategorier</h1>
+        <h1 class="forsideh1">Populære kategorier</h1>
         <section class="default-flex">
 
            <article>
