Lagt til kilder
Lagt kilder og prøvd ut noe greier på logg-inn som ikke funker.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Askepott Sko</title>
 </head>
 <!--Alle bilder som er brukt på denne siden er generert av Leonardo. AI https://app.leonardo.ai/ai-generations-->
+<!--Farger brukt på nettsiden er hentet her https://in.pinterest.com/pin/439382507397806658/-->
 <body>
     <div id="grid-container">
     <header>
