--- a/innlogging.html
+++ b/innlogging.html
@@ -11,6 +11,7 @@
     <title>Logg inn</title>
 </head>
 <body>
+    <!--Farger brukt på nettsiden er hentet her https://in.pinterest.com/pin/439382507397806658/-->
     <div id="grid-container">
         <header>
             <nav>
@@ -23,12 +24,12 @@
                     <li><a href="#"><i class="fa-solid fa-basket-shopping" style="color: #a27442;"></i></a></li>
                     <li><a href="innlogging.html"><i class="fa-solid fa-user" style="color: #a27442;"></i></a></li>  
                 </ul>
-            <form class="sokefelt">
-                <input type="search" placeholder="Søkeord...">
-                <input type="submit" value="Gå">
-            </form>
-        </nav>
-    </header>
+                <form class="sokefelt">
+                    <input type="search" placeholder="Søkeord...">
+                    <input type="submit" value="Gå">
+                </form>
+            </nav>
+        </header>
     <main>   
         <br>
         <section class="sti">
@@ -47,8 +48,8 @@
                     <label for="email" class="epost">E-post:</label>
                     <input type="email" name="email" placeholder="olanordmann@epost.no" id="email" required>
                     <input type="submit" value="Gå">
-                    <label for="password" class="passord">Passord:</label>
-                    <input type="password" name="password" placeholder="*******" size="15" maxlength="30" id="required">
+                    <label for="password" class="password">Passord:</label>
+                    <input type="password" name="password" placeholder="*******" id="password" required>
                     <input type="submit" value="Gå">
                 </form>
             </article>
