--- a/produkt.html
+++ b/produkt.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -11,6 +12,7 @@
     <title>Produktside</title>
 </head>
 <!--Alle bilder som er brukt på denne siden er generert av Leonardo. AI https://app.leonardo.ai/ai-generations-->
+<!--Farger brukt på nettsiden er hentet her https://in.pinterest.com/pin/439382507397806658/-->
 <body>
     <div id="grid-container">
     <header>
@@ -98,5 +100,6 @@
     </footer>
     </div>
 </body>
+
 </html>
 
